# chronowire

./: .gitignore  AGENTS.md  README.md  RELEASING.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  native_executor_cpp_gate.py
doc/chronowire_design/: 01_基本設計.md  02_公開API設計.md  03_内部グラフと論理時間設計.md  04_compileと実行時設計.md  05_Kernel_Backend_Config設計.md  06_Extension_export_診断設計.md  07_パッケージ構成と実装計画.md  08_試験設計.md  09_v0.1確定事項と将来検討.md  10_Native_Executor設計方針.md  11_Buffer_Scheduler_PortablePlanIR設計.md  12_v0.1_v0.2リリース方針.md  13_CppExecutor移行測定.md  14_Operation設計.md  README.md  design_index.json
examples/: __init__.py  native_executor_baseline.py  streaming_cbf.py
src/chronowire/: __init__.py  _cpp_executor.pyi  _cpp_executor.pyx  _cython_executor.pyi  _cython_executor.pyx  binding.py  (+20 more)
tests/: test_cbf_backend_conformance.py  test_config.py  test_conformance_trace.py  test_continuous_session.py  test_cpp_executor.py  test_cython_executor.py  test_diagnostics_collectors_extensions.py  test_execution_bindings.py  test_executor_selection.py  test_export.py  test_extended_sync.py  test_extension_bindings.py  test_flow_runtime.py  test_kernel_backend.py  test_multi_output.py  test_mvdr_flow.py  test_naming_contract.py  test_native_executor_baseline.py  test_native_executor_cpp_gate.py  test_native_operation_module.py  test_native_plan_ir.py  test_operation.py  test_plan_session.py  test_profiler.py  test_rate_frame_compile.py  test_realtime_source.py  test_runtime_buffer.py  test_session.py  test_streaming_cbf_example.py
(+9 files in other folders)
